--- a/react/horai-react/package.json
+++ b/react/horai-react/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@toast-ui/react-calendar": "^2.1.3",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "react": "^18.3.1",
