--- a/react/horai-react/package.json
+++ b/react/horai-react/package.json
@@ -14,7 +14,8 @@
     "date-fns-tz": "^3.2.0",
     "react": "^18.3.1",
     "react-big-calendar": "^1.19.4",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
